2007-06-25 David Barnett <daviebdawg@gmail.com>
  * [gputils] Patch by Michael Ballbach to add support for new COFF format

2007-06-25 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed bug #1466150, where gpasm produced bad HEX output (instead
  of an error) for addresses above 0xFFFF under some hex formats

2007-06-25 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Reverted forward reference changes for RES directive (on 2007-6-19
  & 6-20) since they affect the wrong value
  * [gpasm] Fixed potential uninitialized pointer access in do_define

2007-06-25 David Barnett <daviebdawg@gmail.com>
  * [gputils] Added support for p18f2682, p18f2685, p18f4682, and p18f4685

2007-06-22 David Barnett <daviebdawg@gmail.com>
  * Fixed bug in test scripts that prevented failures from being reported
  properly
  * [gpasm] Disabled reporting testing failed if tests in gpasm.mchip fail
  (several have never passed)
  * [gpasm] Added sx.o into test script directory, apparently forgotten
  * [gpvc] Changed 'gpdasm' to 'gpvc' in gpvc usage message

2007-06-22 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed token problem that caused some beginning-of-line directives
  (include, title, subtitle) to be accepted when not followed by whitespace or
  a delimiter

2007-06-21 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed bug #1335511, where redefining a symbol silently corrupts
  the COFF relocations

2007-06-21 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed to return non-zero for invalid command-line arguments

2007-06-20 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Implemented warning for program code overflow
  * [gpasm] Implemented __maxrom directive (but not __badrom)
  * [gputils] Removed 16c747 (doesn't exist) and added 16f747
  * [gputils] Fixed wrong address in 16c771.lkr

2007-06-20 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Minor fix to previous update, assume 0 instead of 1 for "res"
  directive argument (size).
